# tokenbench

./: .gitignore  README.md  ai-handoff.yaml  handoff-state.json  pyproject.toml  requirements.txt
.claude/skills/: handoff-cycle.md  handoff-decide.md  handoff-escalate.md  handoff-handoff.md  handoff-implement.md  handoff-phase.md  handoff-plan.md  handoff-review.md  handoff-status.md  handoff-sync.md  handoff.md
benchmarks/: README.md  results.json
content/: article.md  video-script.md
content/assets/: comparison-table.md
docs/: article-outline.md  content-safe-brief.md  decision_log.md  roadmap.md  workflows.md
docs/checklists/: code_review.md  plan_review.md
docs/handoffs/: phase1_impl_cycle.md  phase1_plan_cycle.md  phase2_plan_cycle.md
docs/phases/: actionable-insights.md  benchmarks.md  pattern-library.md  phase1.md  phase2.md  project-scoped-dashboard.md  richer-views.md  standalone-dashboard-mvp.md  usage-drivers.md
patterns/: README.md
scripts/: README.md  cli-demo.py  mcp-demo.py
templates/: cycle.md  decision_log.md  feedback.md  handoff_impl.md  handoff_plan.md  implementation_log.md  phase_plan.md  requirements_brief.md  roadmap.md  sync_state.md
tests/: conftest.py  test_analytics.py  test_bench.py  test_drivers.py  test_limits.py  test_parsers.py  test_patterns.py  test_privacy.py  test_scope.py  test_views.py
tokenbench/: __init__.py  __main__.py  analytics.py  cli.py  dashboard.py  drivers.py  equivalents.py  feedback.py  ingest.py  limits.py  parsers.py  schema.py  scope.py  sources.py  storage.py
tokenbench/bench/: __init__.py  (+2 more)
(+19 files in other folders)
