[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenbench"
version = "0.1.0"
description = "Local-first dashboard for Claude Code and Codex CLI token usage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []  # MVP is standard-library only (sqlite3 + http.server).

[project.scripts]
tokenbench = "tokenbench.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["tokenbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `pytest` works without an editable install
# (matches the `python -m pytest` behavior).
pythonpath = ["."]
